# zumi_mini_python_backup

./: .buildinfo  KEY_DETECT.py  TestPyPI-변환 및 설치.TXT  TestPyPI-변환 및 설치.TXT.bak  handler_test_01.py  key_detector_02.py  module.html  objects.inv  protocol.html  protocol.py  py-modindex.html  receiver.html  search.html  searchindex.js  serial_01.py  serial_02_get.py  serial_03_detect.py  serial_03_set.py  serial_03_text_test.py  teachable_machine_01.py  zumi_AI.html  zumi_mini.py
AI/: gradio_01.py
Zumi_AI/: README.md  __init__.py  apriltag_01.py  debug_clusters.pnm  debug_lines.ps  debug_output.pnm  debug_output.ps  debug_preprocess.pnm  debug_quads.ps  debug_quads_fixed.pnm  debug_quads_raw.pnm  debug_samples.pnm  debug_segmentation.pnm  debug_threshold.pnm  lib_ver.txt  lib_ver_e.txt  my_module.py  protocol.py  pyproject.toml  receiver.py  serial_01.py  serial_02.py  serial_03.py  socket_01.py  socket_02.py  stream.py  zumi_AI.py
Zumi_AI/docs/source/: conf.py  zumi_AI.rst
Zumi_AI/tests/: serial_01.py  serial_03_text_test.py
Zumi_AI/zumi_AI/: __init__.py  face_detector.py  face_landmark.py  face_recognizer.py  number_recognizer.py  protocol.py  receiver.py  sketch_recognizer.py  zumi_AI.py
Zumi_AI/zumi_AI/res/face/: registered_faces.pkl
Zumi_AI/zumi_AI/res/model/: face_detector.tflite
Zumi_AI/zumi_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
_modules/: index.html  protocol.html  receiver.html  zumi_AI.html
_sources/: protocol.rst.txt  zumi_AI.rst.txt
_static/: documentation_options.js
_temp/: testPy_01.py  testPy_02.py  (+1 more)
(+31 files in other folders)
