[build-system]
requires = ["setuptools>=61.0"] # 패키지 빌드에 필요한 최소 setuptools 버전
build-backend = "setuptools.build_meta" # 사용할 빌드 백엔드 지정

[project]
name = "zumi-ai" # 배포할 패키지 이름. pip install 할 때 사용됨. 소문자, 하이픈 권장.
version = "0.1.4" # 패키지 버전. 처음 배포 시 0.1.0 또는 0.1.1 등으로 시작.
authors = [
  { name="dr", email="drlee@robolink.co.kr" }, # 저자 정보
]
description = "Zumi AI for library." # 패키지 설명
readme = "README.md" # README 파일 지정
requires-python = ">=3.7" # 이 라이브러리가 요구하는 최소 파이썬 버전
classifiers = [ # PyPI에서 패키지를 분류하는데 사용되는 목록 (https://pypi.org/classifiers/)
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # 예시: MIT 라이선스 사용 시
    "Operating System :: OS Independent",
]
keywords = ["ai", "zumi", "robotics"] # 검색 키워드

[project.urls] # 관련 URL (선택 사항)
"Homepage" = "https://github.com/truedo/zumi_mini_python_backup" # GitHub 레포 주소 등
"Bug Tracker" = "https://github.com/truedo/zumi_mini_python_backup/issues"

#[project.dependencies] # 이 패키지가 의존하는 다른 패키지 목록
# 예시: 만약 numpy가 필요하다면:
# numpy = ">=1.20"
# 다른 패키지들은 여기에 추가